new files random.cc/h, distrib.cc/h

--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -12,11 +12,11 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 #
 COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I. /I "std" /I "pvm" /DBUILDING_SIM
 CPPOBJS= task.obj ccoroutine.obj ctypes.obj carray.obj cgate.obj cmodule.obj csimul.obj cobject.obj cpar.obj \
-	 cstat.obj chist.obj cdensity.obj cvarhist.obj cpsquare.obj cksplit.obj \
+         cstat.obj chist.obj cdensity.obj cvarhist.obj cpsquare.obj cksplit.obj \
          cmessage.obj cdetect.obj cstk.obj util.obj cllist.obj ctopo.obj errmsg.obj \
-	 cmsgheap.obj cnetmod.obj coutvect.obj cqueue.obj chead.obj cwatch.obj \
+         cmsgheap.obj cnetmod.obj coutvect.obj cqueue.obj chead.obj cwatch.obj \
          cpacket.obj cfsm.obj cstruct.obj cchannel.obj cenum.obj cexception.obj cdispstr.obj \
-         onstartup.obj
+         onstartup.obj random.obj distrib.obj
 CPPOBJS_STD= std\netpack.obj
 CPPOBJS_PVM= pvm\pvmmod.obj pvm/pvmpack.obj
 CPPOBJS_MPI= mpi\mpimod.obj mpi/mpipack.obj
@@ -33,7 +33,7 @@ sim_pvm : sim_pvm$(LIB_SUFFIX)
 
 sim_std.lib : $(CPPOBJS) $(CPPOBJS_STD)
 	$(AR) /nologo /out:sim_std.lib $(CPPOBJS) $(CPPOBJS_STD)
-        copy sim_std.lib $(OMNETPP_LIB_DIR:/=\)
+	copy sim_std.lib $(OMNETPP_LIB_DIR:/=\)
 
 sim_std.dll : $(CPPOBJS) $(CPPOBJS_STD) $(LIBS)
 	$(SHLIB_LD) /nologo /out:sim_std.dll /implib:sim_std.ilib /subsystem:console /def:sim_std.def $(CPPOBJS) $(CPPOBJS_STD) $(LIBS)
@@ -152,6 +152,12 @@ cexception.obj: cexception.cc
 onstartup.obj: onstartup.cc
 	$(CXX) $(COPTS) /c /Tp onstartup.cc
 
+random.obj: random.cc
+	$(CXX) $(COPTS) /c /Tp random.cc
+
+distrib.obj: distrib.cc
+	$(CXX) $(COPTS) /c /Tp distrib.cc
+
 util.obj : util.cc
 	$(CXX) $(COPTS) /c /Tp util.cc
 
@@ -190,580 +196,7 @@ clean:
 
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-carray.obj: carray.cc \
-  ../../include/macros.h \
-  ../../include/errmsg.h \
-  ../../include/carray.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h
-ccoroutine.obj: ccoroutine.cc \
-  ../../include/ccoroutine.h \
-  task.h \
-  ../../include/defs.h
-cdensity.obj: cdensity.cc \
-  ../../include/macros.h \
-  ../../include/cdensity.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cstat.h
-cdetect.obj: cdetect.cc \
-  ../../include/csimul.h \
-  ../../include/cdetect.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/chead.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cobject.h \
-  ../../include/cstat.h
-cenum.obj: cenum.cc \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/csimul.h \
-  ../../include/cenum.h \
-  ../../include/cexception.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h
-cexception.obj: cexception.cc \
-  ../../include/cexception.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/chead.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cobject.h
-cfsm.obj: cfsm.cc \
-  ../../include/macros.h \
-  ../../include/cfsm.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h
-cgate.obj: cgate.cc \
-  ../../include/cmessage.h \
-  ../../include/cmodule.h \
-  ../../include/carray.h \
-  ../../include/cpar.h \
-  ../../include/cenvir.h \
-  ../../include/csimul.h \
-  ../../include/macros.h \
-  ../../include/cgate.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/cqueue.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h \
-  ../../include/ctypes.h
-chead.obj: chead.cc \
-  ../../include/macros.h \
-  ../../include/chead.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/cobject.h \
-  ../../include/util.h
-chist.obj: chist.cc \
-  ../../include/macros.h \
-  ../../include/cdetect.h \
-  ../../include/chist.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cstat.h \
-  ../../include/cdensity.h
-cksplit.obj: cksplit.cc \
-  ../../include/macros.h \
-  ../../include/cenvir.h \
-  ../../include/cksplit.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cpar.h \
-  ../../include/cdensity.h \
-  ../../include/cstat.h
-cllist.obj: cllist.cc \
-  ../../include/macros.h \
-  ../../include/cllist.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h
-cmessage.obj: cmessage.cc \
-  ../../include/macros.h \
-  ../../include/cmodule.h \
-  ../../include/cmessage.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/ccoroutine.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h \
-  ../../include/cpar.h
-cmodule.obj: cmodule.cc \
-  ../../include/cmodule.h \
-  ../../include/cgate.h \
-  ../../include/cmessage.h \
-  ../../include/csimul.h \
-  ../../include/carray.h \
-  ../../include/ctypes.h \
-  ../../include/cpar.h \
-  ../../include/cnetmod.h \
-  ../../include/cenvir.h \
-  ../../include/cexception.h \
-  ../../include/defs.h \
-  ../../include/cobject.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/cqueue.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-cmsgheap.obj: cmsgheap.cc \
-  ../../include/macros.h \
-  ../../include/cmessage.h \
-  ../../include/cmsgheap.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/carray.h \
-  ../../include/cpar.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h
-cnetmod.obj: cnetmod.cc \
-  ../../include/cpar.h \
-  ../../include/cenvir.h \
-  ../../include/cnetmod.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/cmodule.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-cobject.obj: cobject.cc \
-  ../../include/csimul.h \
-  ../../include/cenvir.h \
-  ../../include/macros.h \
-  ../../include/cobject.h \
-  ../../include/cexception.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/chead.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cpar.h \
-  ../../include/ctypes.h
-coutvect.obj: coutvect.cc \
-  ../../include/coutvect.h \
-  ../../include/cmodule.h \
-  ../../include/csimul.h \
-  ../../include/cenvir.h \
-  ../../include/cexception.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/cpar.h
-cpacket.obj: cpacket.cc \
-  ../../include/macros.h \
-  ../../include/cpacket.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cmessage.h \
-  ../../include/carray.h \
-  ../../include/cpar.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h
-cpar.obj: cpar.cc \
-  ../../include/cpar.h \
-  ../../include/cstat.h \
-  ../../include/macros.h \
-  ../../include/errmsg.h \
-  ../../include/cmodule.h \
-  ../../include/csimul.h \
-  ../../include/cenvir.h \
-  ../../include/cexception.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ctypes.h \
-  ../../include/chead.h \
-  ../../include/ccoroutine.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-cpsquare.obj: cpsquare.cc \
-  ../../include/macros.h \
-  ../../include/cpsquare.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/cdensity.h \
-  ../../include/cstat.h
-cqueue.obj: cqueue.cc \
-  ../../include/macros.h \
-  ../../include/cqueue.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h
-csimul.obj: csimul.cc \
-  ../../include/cmodule.h \
-  ../../include/cmessage.h \
-  ../../include/csimul.h \
-  ../../include/cenvir.h \
-  ../../include/ctypes.h \
-  ../../include/cpar.h \
-  ../../include/cnetmod.h \
-  ../../include/cstat.h \
-  ../../include/cexception.h \
-  ../../include/defs.h \
-  ../../include/cobject.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-cstat.obj: cstat.cc \
-  ../../include/cstat.h \
-  ../../include/macros.h \
-  ../../include/cdetect.h \
-  ../../include/cexception.h \
-  ../../include/defs.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/ctypes.h \
-  ../../include/chead.h
-cstk.obj: cstk.cc \
-  ../../include/cstk.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cexception.h \
-  ../../include/ccoroutine.h \
-  ../../include/defs.h
-cstruct.obj: cstruct.cc \
-  ../../include/cstruct.h \
-  ../../include/cenum.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/ctypes.h \
-  ../../include/cobject.h \
-  ../../include/defs.h \
-  ../../include/chead.h
-ctopo.obj: ctopo.cc \
-  ../../include/macros.h \
-  ../../include/cmodule.h \
-  ../../include/cgate.h \
-  ../../include/cpar.h \
-  ../../include/cllist.h \
-  ../../include/ctopo.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/ccoroutine.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-ctypes.obj: ctypes.cc \
-  ../../include/cpar.h \
-  ../../include/cmodule.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/cexception.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/csimul.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h
-cvarhist.obj: cvarhist.cc \
-  ../../include/macros.h \
-  ../../include/cvarhist.h \
-  ../../include/cexception.h \
-  ../../include/ctypes.h \
-  ../../include/defs.h \
-  ../../include/chead.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/chist.h \
-  ../../include/cdensity.h \
-  ../../include/cstat.h
-cwatch.obj: cwatch.cc \
-  ../../include/cwatch.h \
-  ../../include/cobject.h \
-  ../../include/util.h \
-  ../../include/defs.h
-errmsg.obj: errmsg.cc
-task.obj: task.cc \
-  task.h
-util.obj: util.cc \
-  ../../include/util.h \
-  ../../include/csimul.h \
-  ../../include/macros.h \
-  ../../include/cexception.h \
-  ../../include/cwatch.h \
-  ../../include/cpacket.h \
-  ../../include/defs.h \
-  ../../include/errmsg.h \
-  ../../include/chead.h \
-  ../../include/cmsgheap.h \
-  ../../include/ccoroutine.h \
-  ../../include/coutvect.h \
-  ../../include/cobject.h \
-  ../../include/ctypes.h \
-  ../../include/cmessage.h \
-  ../../include/carray.h \
-  ../../include/cpar.h
-std/netpack.obj: std/netpack.cc \
-  ../../include/omnetpp.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cobject.h \
-  ../../include/csimul.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cllist.h \
-  ../../include/chead.h \
-  ../../include/cwatch.h \
-  ../../include/cpar.h \
-  ../../include/cgate.h \
-  ../../include/cmessage.h \
-  ../../include/cpacket.h \
-  ../../include/cmsgheap.h \
-  ../../include/cstk.h \
-  ../../include/cmodule.h \
-  ../../include/cstat.h \
-  ../../include/cdensity.h \
-  ../../include/chist.h \
-  ../../include/cvarhist.h \
-  ../../include/cpsquare.h \
-  ../../include/cksplit.h \
-  ../../include/coutvect.h \
-  ../../include/cdetect.h \
-  ../../include/ctopo.h \
-  ../../include/cnetmod.h \
-  ../../include/cfsm.h \
-  ../../include/protocol.h \
-  ../../include/cenvir.h \
-  ../../include/cenum.h \
-  ../../include/cstruct.h \
-  ../../include/envirext.h \
-  ../../include/ccoroutine.h
-pvm/pvmmod.obj: pvm/pvmmod.cc \
-  ../../include/cmessage.h \
-  ../../include/cmodule.h \
-  ../../include/csimul.h \
-  ../../include/cstk.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/cenvir.h \
-  ../../include/cpar.h \
-  pvm/pvmmod.h \
-  ../../include/cobject.h \
-  ../../include/carray.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h \
-  ../../include/cnetmod.h \
-  pvm/pvmdefs.h
-pvm/pvmpack.obj: pvm/pvmpack.cc \
-  ../../include/omnetpp.h \
-  pvm/pvmmod.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cobject.h \
-  ../../include/csimul.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cllist.h \
-  ../../include/chead.h \
-  ../../include/cwatch.h \
-  ../../include/cpar.h \
-  ../../include/cgate.h \
-  ../../include/cmessage.h \
-  ../../include/cpacket.h \
-  ../../include/cmsgheap.h \
-  ../../include/cstk.h \
-  ../../include/cmodule.h \
-  ../../include/cstat.h \
-  ../../include/cdensity.h \
-  ../../include/chist.h \
-  ../../include/cvarhist.h \
-  ../../include/cpsquare.h \
-  ../../include/cksplit.h \
-  ../../include/coutvect.h \
-  ../../include/cdetect.h \
-  ../../include/ctopo.h \
-  ../../include/cnetmod.h \
-  ../../include/cfsm.h \
-  ../../include/protocol.h \
-  ../../include/cenvir.h \
-  ../../include/cenum.h \
-  ../../include/cstruct.h \
-  ../../include/envirext.h \
-  ../../include/ccoroutine.h \
-  pvm/pvmdefs.h
-mpi/mpimod.obj: mpi/mpimod.cc \
-  ../../include/cmessage.h \
-  ../../include/cmodule.h \
-  ../../include/csimul.h \
-  ../../include/cstk.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/cenvir.h \
-  ../../include/cpar.h \
-  mpi/mpimod.h \
-  mpi/mpipack.h \
-  ../../include/cobject.h \
-  ../../include/carray.h \
-  ../../include/util.h \
-  ../../include/defs.h \
-  ../../include/ccoroutine.h \
-  ../../include/chead.h \
-  ../../include/cqueue.h \
-  ../../include/cgate.h \
-  ../../include/errmsg.h \
-  ../../include/cmsgheap.h \
-  ../../include/coutvect.h \
-  ../../include/cnetmod.h \
-  mpi/mpidefs.h
-mpi/mpipack.obj: mpi/mpipack.cc \
-  mpi/mpipack.h \
-  ../../include/omnetpp.h \
-  mpi/mpimod.h \
-  mpi/mpidefs.h \
-  ../../include/defs.h \
-  ../../include/util.h \
-  ../../include/errmsg.h \
-  ../../include/cobject.h \
-  ../../include/csimul.h \
-  ../../include/macros.h \
-  ../../include/ctypes.h \
-  ../../include/carray.h \
-  ../../include/cqueue.h \
-  ../../include/cllist.h \
-  ../../include/chead.h \
-  ../../include/cwatch.h \
-  ../../include/cpar.h \
-  ../../include/cgate.h \
-  ../../include/cmessage.h \
-  ../../include/cpacket.h \
-  ../../include/cmsgheap.h \
-  ../../include/cstk.h \
-  ../../include/cmodule.h \
-  ../../include/cstat.h \
-  ../../include/cdensity.h \
-  ../../include/chist.h \
-  ../../include/cvarhist.h \
-  ../../include/cpsquare.h \
-  ../../include/cksplit.h \
-  ../../include/coutvect.h \
-  ../../include/cdetect.h \
-  ../../include/ctopo.h \
-  ../../include/cnetmod.h \
-  ../../include/cfsm.h \
-  ../../include/protocol.h \
-  ../../include/cenvir.h \
-  ../../include/cenum.h \
-  ../../include/cstruct.h \
-  ../../include/envirext.h \
-  ../../include/ccoroutine.h
+*.obj: *.cc
+std/*.obj: std/*.cc
+pvm/*.obj: pvm/*.cc
+mpi/*.obj: mpi/*.cc
