--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -29,11 +29,11 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -Istd -Ipvm -DBUILDING_SIM
 
 CPPOBJS= ccoroutine.o ctypes.o carray.o cgate.o cmodule.o csimul.o cobject.o cpar.o \
-	 cstat.o chist.o cdensity.o cvarhist.o cpsquare.o cksplit.o task.o \
+         cstat.o chist.o cdensity.o cvarhist.o cpsquare.o cksplit.o task.o \
          cmessage.o cdetect.o cstk.o util.o cllist.o ctopo.o errmsg.o \
-	 cmsgheap.o cnetmod.o coutvect.o cqueue.o chead.o cwatch.o \
+         cmsgheap.o cnetmod.o coutvect.o cqueue.o chead.o cwatch.o \
          cpacket.o cfsm.o cenum.o cstruct.o cchannel.o cexception.o cdispstr.o \
-         onstartup.o
+         onstartup.o random.o distrib.o
 CPPOBJS_STD= std/netpack.o
 CPPOBJS_MPI= mpi/mpimod.o mpi/mpipack.o
 CPPOBJS_PVM= pvm/pvmmod.o pvm/pvmpack.o
@@ -179,6 +179,12 @@ cexception.o : cexception.cc
 
 onstartup.o : onstartup.cc
 	$(CXX) -c $(COPTS) onstartup.cc
+
+random.o : random.cc
+	$(CXX) -c $(COPTS) random.cc
+
+distrib.o : distrib.cc
+	$(CXX) -c $(COPTS) distrib.cc
 
 util.o : util.cc
 	$(CXX) -c $(COPTS) util.cc
