--- a/configure.in
+++ b/configure.in
@@ -125,7 +125,7 @@ fi
 
 AC_PROG_YACC
 if test "$YACC" = "yacc"; then
-   AC_MSG_WARN(neither bison nor byacc is found...)
+   AC_MSG_WARN([neither bison nor byacc is found...])
 fi
 
 AC_PROG_LEX
@@ -199,7 +199,7 @@ else
 fi
 
 if test "x$WISH" = "x"; then
-    AC_MSG_WARN(cannot find wish -- you'll need to manually adjust the Plove script)
+    AC_MSG_WARN([cannot find wish -- you'll need to manually adjust the Plove script])
 fi
 
 
@@ -221,22 +221,22 @@ SYS_LIBS=""
 
 AC_CHECK_LIB(m, floor,
    SYS_LIBS="-lm $SYS_LIBS",
-   AC_MSG_WARN(math library (-lm) not found (maybe part of standard C lib?))
+   AC_MSG_WARN([math library (-lm) not found (maybe part of standard C lib?)])
    )
 
 AC_CHECK_LIB(dl, dlopen,
    HAVE_DLOPEN=1; SYS_LIBS="-ldl $SYS_LIBS",
-   HAVE_DLOPEN=0; AC_MSG_WARN(dynamic loading of libs not possible (no dlopen() syscall))
+   HAVE_DLOPEN=0; AC_MSG_WARN([dynamic loading of libs not possible (no dlopen() syscall)])
    )
 if test "$HAVE_DLOPEN" = "1"; then
    AC_CHECK_HEADER(dlfcn.h, ,
-      HAVE_DLOPEN=0; AC_MSG_WARN(dynamic loading of libs not possible (no dlfcn.h header))
+      HAVE_DLOPEN=0; AC_MSG_WARN([dynamic loading of libs not possible (no dlfcn.h header)])
    )
 fi
 
 AC_CHECK_LIB($CXXLIB, main,
    SYS_LIBS="-l$CXXLIB $SYS_LIBS",
-   AC_MSG_WARN(standard C++ library (-l$CXXLIB) not found; linking problems are likely)
+   AC_MSG_WARN([standard C++ library (-l$CXXLIB) not found; linking problems are likely])
    )
 
 #----------------------
@@ -245,17 +245,17 @@ AC_CHECK_LIB($CXXLIB, main,
 
 AC_CHECK_LIB(mpi, MPI_Init,
    MPI_LIBS="-lmpi -lelan",
-   AC_MSG_WARN(MPI library not installed!)
+   AC_MSG_WARN([MPI library not installed!])
    )
 
 dnl FIXME
 if test ! -n "$MPI_CFLAGS"; then
-    AC_MSG_WARN(FIXME: check for presence of MPI headers not implemented!)
+    AC_MSG_WARN([FIXME: check for presence of MPI headers not implemented!])
 fi
 
 dnl FIXME
 if test ! -n "$MPI_LIBS"; then
-    AC_MSG_WARN(FIXME: check for presence of MPI libs not implemented!)
+    AC_MSG_WARN([FIXME: check for presence of MPI libs not implemented!])
 fi
 
 
@@ -265,8 +265,8 @@ fi
 
 if test ! -n "$PVM_CFLAGS"; then
     if test ! -n "$PVM_ROOT"; then
-        AC_MSG_WARN(no PVM_CFLAGS set in configure.user, and no PVM_ROOT environment variable!)
-        AC_MSG_WARN(may run into problems building SIM_PVM!)
+        AC_MSG_WARN([no PVM_CFLAGS set in configure.user, and no PVM_ROOT environment variable!])
+        AC_MSG_WARN([may run into problems building SIM_PVM!])
     else
         PVM_CFLAGS="-I$PVM_ROOT/include"
     fi
@@ -277,8 +277,8 @@ if test ! -n "$PVM_LIBS"; then
     OPP_CHECK_LIB_WITHPATH(gpvm3, pvm_joingroup, $PVM_ROOT/lib/$PVM_ARCH,
       PVM_LIBS="$lib_path_switch -lgpvm3 -lpvm3",
       [PVM_LIBS=""
-       AC_MSG_WARN(if you *do* have PVM3 then set PVM_ROOT and PVM_ARCH...)
-       AC_MSG_WARN(...and re-run configure!)],
+       AC_MSG_WARN([if you *do* have PVM3 then set PVM_ROOT and PVM_ARCH...])
+       AC_MSG_WARN([...and re-run configure!])],
        -lpvm3
     )
 fi
@@ -350,14 +350,15 @@ opp_save_CFLAGS=$CFLAGS
 CFLAGS="$EXPAT_CFLAGS $CFLAGS"
 AC_CHECK_HEADER(expat.h, ,
    NO_EXPAT=1
-   AC_MSG_WARN(Expat header not found. If you *do* have Expat, set EXPAT_CFLAGS!)
-   , )
+   AC_MSG_WARN(Expat header not found. If you *do* have Expat then set EXPAT_CFLAGS!)
+   )
+
 CFLAGS=$opp_save_CFLAGS
 
 # FIXME this ignores the EXPAT_LIBS variable
 AC_CHECK_LIB(expat, XML_ParserCreate, ,
    NO_EXPAT=1
-   AC_MSG_WARN(Expat library not found.), )
+   AC_MSG_WARN([Expat library not found.]), )
 
 #----------------------
 # Check for LIBXML header and lib
@@ -371,32 +372,33 @@ opp_save_CFLAGS=$CFLAGS
 CFLAGS="$LIBXML_CFLAGS $CFLAGS"
 AC_CHECK_HEADER(libxml/parser.h, ,
    NO_LIBXML=1
-   AC_MSG_WARN(LIBXML header not found. If you *do* have LIBXML, set LIBXML_CFLAGS!)
-   , )
+   AC_MSG_WARN(LIBXML header not found. If you *do* have LIBXML then set LIBXML_CFLAGS!)
+   )
 CFLAGS=$opp_save_CFLAGS
 
 # FIXME this ignores the LIBXML_LIBS variable
 AC_CHECK_LIB(xml2, xmlParseChunk, ,
    NO_LIBXML=1
-   AC_MSG_WARN(LIBXML library not found.), )
+   AC_MSG_WARN([LIBXML library not found.])
+   , )
 
 #----------------------
 # Choose between Expat and LIBXML.
 #----------------------
 
 if test "x$NO_EXPAT" != "x1"; then
-   AC_MSG_NOTICE(Using Expat for XML parsing in NEDXML.)
+   AC_MSG_NOTICE([Using Expat for XML parsing in NEDXML.])
    XMLPARSER=expat
    XML_CFLAGS=$EXPAT_CFLAGS
    XML_LIBS=$EXPAT_LIBS
 elif test "x$NO_LIBXML" != "x1"; then
-   AC_MSG_NOTICE(Using LIBXML for XML parsing in NEDXML.)
+   AC_MSG_NOTICE([Using LIBXML for XML parsing in NEDXML.])
    XMLPARSER=libxml
    XML_CFLAGS=$LIBXML_CFLAGS
    XML_LIBS=$LIBXML_LIBS
 else
    XMLPARSER=none
-   AC_MSG_WARN(No suitable XML parser -- NEDXML and NEDTOOL won't support XML input.)
+   AC_MSG_WARN([No suitable XML parser -- NEDXML and NEDTOOL won't support XML input.])
 fi
 
 #----------------------
@@ -410,42 +412,21 @@ fi
 opp_save_CFLAGS=$CFLAGS
 CFLAGS="$AKAROA_CFLAGS $CFLAGS"
 AC_CHECK_HEADER(akaroa.H, ,
-   NO_AKAROA=1; AC_MSG_WARN(Akaroa header not found.
-   If you *do* have Akaroa installed then add the include path to AKAROA_CFLAGS.), )
+   NO_AKAROA=1
+   AC_MSG_WARN([Akaroa header not found. If you *do* have Akaroa installed then add the include path to AKAROA_CFLAGS.])
+   , )
 CFLAGS=$opp_save_CFLAGS
 
 # FIXME this ignores the AKAROA_LIBS variable
 AC_CHECK_LIB(akaroa, AkDeclareParameters, ,
-   NO_AKAROA=1; AC_MSG_WARN(Akaroa library not found.), )
+   NO_AKAROA=1
+   AC_MSG_WARN([Akaroa library not found.])
+   , )
 
 if test "x$NO_AKAROA" != "x1"; then
    CFLAGS="$CFLAGS -DWITH_AKAROA"
    SYS_LIBS="$SYS_LIBS $AKAROA_LIBS"
 fi
-
-#----------------------
-# Checks for header files.
-#----------------------
-
-# FIXME:
-#AC_HEADER_STDC
-#AC_CHECK_HEADERS(malloc.h unistd.h)
-
-
-# Checks for typedefs, structures, and compiler characteristics.
-#AC_C_CONST
-#AC_C_INLINE
-#AC_TYPE_SIZE_T
-#AC_STRUCT_TM
-
-#----------------------
-# Checks for library functions.
-#----------------------
-
-AC_FUNC_MEMCMP
-AC_TYPE_SIGNAL
-AC_FUNC_VPRINTF
-AC_CHECK_FUNCS(select strdup strspn strstr)
 
 #----------------------
 # Linker flags
@@ -473,7 +454,7 @@ if test "$build_shared_libs" = yes; then
     if test "$cygwin" = yes; then
         CFLAGS="$CFLAGS -DWIN32_DLL"
     else
-	CFLAGS="$CFLAGS $SHLIB_CFLAGS"
+        CFLAGS="$CFLAGS $SHLIB_CFLAGS"
     fi
 else
     LIB_SUFFIX='$(A_LIB_SUFFIX)'
